# python-starter

./: .env  .gitignore  Dockerfile  README.md  compose.yml  init.sh  init_initial.sh  main.py  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
projects/project_1/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
projects/project_2/: main.py  pyproject.toml
python_starter/: test_sample.py
shared_libs/my_conn/: pyproject.toml
shared_libs/my_conn/src/: my_conn.py
shared_libs/my_logger/: pyproject.toml
shared_libs/my_logger/src/: my_logger.py
tests/: test_sample.py
